<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    android:orientation="vertical"
    android:screenOrientation="portrait">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvView"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:text="@string/activity_main_study"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userNameMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button19"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:gravity="left"
                android:onClick="buttonVV"
                android:text="@string/activity_main_item_one"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/button15"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:gravity="left"
                android:onClick="newScreenOne"
                android:text="@string/activity_main_item_two"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />


            <Button
                android:id="@+id/button16"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:gravity="left"
                android:onClick="newScreenTwo"
                android:text="@string/activity_main_item_three"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/button17"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:gravity="left"
                android:onClick="newScreenThree"
                android:text="@string/activity_main_item_fo"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/button18"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:gravity="left"
                android:onClick="newScreenFo"
                android:text="@string/activity_main_item_five"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/kn"
            android:gravity="center"
            android:onClick="signIn"
            android:text="@string/activity_main_authorization" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="175sp"
                    android:layout_height="28dp"
                    android:layout_gravity="left|bottom"
                    android:background="@drawable/kn"
                    android:onClick="newScreenSpravka"
                    android:text="@string/activity_main_reference"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button25"
                    android:layout_width="170dp"
                    android:layout_height="28dp"
                    android:layout_gravity="right|bottom"
                    android:background="@drawable/kn"
                    android:onClick="lk"
                    android:text="@string/activity_main_personal_area"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>